Исправлен код, учтены замечания